@@ -36,3 +36,5 @@ pscost history reset to 3
 --- 1 jan full 1 ---
 pscost history reset to 5
 --- 1 jan full 2 ---
+store global history
+history reset count is a parameter.
